Prevent the company logos from taking up too much space

--- a/stockhelper/stockapp/static/stockapp/css/detail.css
+++ b/stockhelper/stockapp/static/stockapp/css/detail.css
@@ -23,6 +23,10 @@
     margin: auto; /* center the top containers */
 }
 
+.logo {
+    max-width: 350px; /* ensure the image doesn't go beyond the company-container */
+}
+
 .price-container {
     justify-content: center; /* center horizontally */
     align-items: center; /* center vertically */
